Document warnings triggered during angent loading